Make img-overlay-title position relative to img-card to fix out of bound title text

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,11 +21,15 @@ input.transparent-input:focus {
 }
 
 #cards-container {
+    display: flex !important;
+    align-items: center !important;
     padding-left: 30px;
     padding-right: 30px;
 }
 
-.col-element {
+.col-12 {
+    display: flex !important;
+    justify-content: center !important;
     /* Hide images with opacity set to 0 until image is loaded ant JavaScript changes to opacity to 1 */
     opacity: 0;
     transition: opacity 1s;
@@ -37,7 +41,7 @@ input.transparent-input:focus {
 }
 
 .img-card {
-    display: flex;
+    position: relative;
     transition: transform 0.3s;
 }
 
@@ -47,11 +51,11 @@ input.transparent-input:focus {
 
 }
 
-.card-title {
+.img-overlay-title {
     position: absolute;
     right: 0;
     bottom: 0;
-    padding: 2rem 3rem;
+    padding: 2rem;
 
     color: whitesmoke;
     /* offset-x | offset-y | blur-radius | color */
@@ -62,7 +66,7 @@ input.transparent-input:focus {
     transition: opacity 0.3s;
 }
 
-.card-title:hover {
+.img-overlay-title:hover {
     /* Show img-overlay then hovered over */
     opacity: 1;
 }
